# DistributeCompute

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  IAction.h  IActionFactory.h  IMessage.h  README.md  action_process.cpp  action_process.h  config.cpp  config.h  config.json  connection.cpp  connection.h  consumer.cpp  consumer.h  consumer_callback.cpp  consumer_callback.h  download.cpp  download.h  downloader.cpp  downloader.h  event.cpp  event.h  event_loop.cpp  event_loop.h  event_result.h  main.cpp  process_launch.json  producer.cpp  producer.h  producer_callback.h  uuid_generator.h
FileHandler/: CMakeLists.txt  file.cpp  file.h
JsonReader/: CMakeLists.txt  json.hpp:Zone.Identifier  json_message_impl.cpp  json_message_impl.h  json_nlohmann_adapter.cpp  json_nlohmann_adapter.h
testProducer/: producer.py
unittests/: CMakeLists.txt  test_event_loop.cpp
